# finview-backend

./: Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
api/db/: db.py
api/models/: transactions.py
api/routes/: transactions.py
api/schemas/: transactions.py
api/services/: transactions.py
scripts/: create_db.py
